convert to helvetica

--- a/src/styl/chart-editor.styl
+++ b/src/styl/chart-editor.styl
@@ -235,6 +235,7 @@ span.step-number
 .mobile-overrides
 	&> h2:first-child
 		font-family $font-sans-bold
+		font-weight $font-weight-bold
 		margin-bottom 1em
 	.scale-options
 		margin-top 0.5em
