--- a/src/styl/type.styl
+++ b/src/styl/type.styl
@@ -1,9 +1,11 @@
 // Typography
 
 // Fonts
-$font-sans = 'Khula-Regular',Arial,Helvetica,sans-serif
-$font-sans-light = 'Khula-Light',Arial,Helvetica,sans-serif
-$font-sans-bold = "Khula-Bold", Arial, sans-serif
+$font-sans = Helvetica,sans-serif
+$font-sans-light = Helvetica,sans-serif
+$font-sans-bold = Helvetiac,sans-serif
+$font-weight-bold = bold
+$font-weight-light = 200
 $font-serif = Georgia,serif
 $primary-font-family = $font-sans
 $secondary-font-family = $font-serif
