--- a/src/styl/chart-renderer.styl
+++ b/src/styl/chart-renderer.styl
@@ -23,6 +23,7 @@ svg
   &.renderer-svg
     fill $color-bg
     font-family $font-sans-light
+    font-weight $font-weight-light
     text-rendering optimizeLegibility
     box-sizing border-box
     .svg-background
@@ -36,6 +37,7 @@ svg
   .axis
     .tick
       font-family $font-sans-light
+      font-weight $font-weight-light
       &[data-anchor="middle"]
         text
           text-anchor middle
@@ -75,6 +77,7 @@ svg
 
   .concealer-label
     font-family $font-sans-light
+    font-weight $font-weight-light
     text
       fill $color-chart-axis-text
     rect
@@ -97,6 +100,7 @@ svg
         stroke-linejoin round
     .label
       font-family $font-sans-light
+      font-weight $font-weight-light
 
   .column-label
     fill $color-chart-axis-text
@@ -109,6 +113,7 @@ svg
 
 .svg-text
   font-family $font-sans-light
+  font-weight $font-weight-light
   font-size $em_size
   &.svg-text-credit
     font-size $em_size*0.6
@@ -136,6 +141,7 @@ svg
 .svg-label-text
   font-size $em_size
   font-family $font-sans-light
+  font-weight $font-weight-light
   cursor move
 
 .crosshair
