--- a/src/styl/colors.styl
+++ b/src/styl/colors.styl
@@ -15,12 +15,12 @@ $color-editor-text = #333333
 $color-editor-placeholder = #CACACA
 
 $chart-colors = \
-	#a50026 \
-	#fdae61 \
-	#d73027 \
-	#abd9e9 \
-	#f46d43 \
-	#74add1 \
+	#fc8d62 \
+	#8da0cb \
+	#a6d854 \
+	#66c2a5 \
+	#ffd92f \
+	#e5c494 \
 	#4575b4 \
 	#313695 \
 	#999 \
